--- a/client/package.json
+++ b/client/package.json
@@ -9,16 +9,18 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^18.0.1",
     "@reduxjs/toolkit": "^1.9.5",
     "expo": "~48.0.18",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "0.71.8",
-    "react-native-bouncy-checkbox": "^3.0.7",
-    "react-redux": "^8.0.7",
-    "react-native-web": "~0.18.10",
     "react-dom": "18.2.0",
-    "@expo/webpack-config": "^18.0.1"
+    "react-native": "0.71.14",
+    "react-native-bouncy-checkbox": "^3.0.7",
+    "react-native-paper": "^5.12.3",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-web": "~0.18.10",
+    "react-redux": "^8.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
